finish the AI dev assessment

--- a/Ningyuan_AIDev_Assessment.ipynb
+++ b/Ningyuan_AIDev_Assessment.ipynb
@@ -2,11 +2,42 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "source": [
+        "# Written Response: Jupyter Notebook to Processing Pipeline"
+      ],
+      "metadata": {
+        "id": "0QqM0lLetKeD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Gait analysis is the systematic study of animal locomotion through the measurement of body movements. To translate a Jupyter notebook containing a machine learning model for gait analysis into a software application, I will follow the following steps:\n",
+        "\n",
+        "1. I will **extract the relevant code** from the notebook, including core components and functions such as model loading, data pre-processing, and accuracy predictions. I will convert this code into separate functions, classes, and modules in Python files to ensure reproducibility. Additionally, I will create a user-friendly interface, such as a **command-line interface**, to facilitate interaction with the software. This will enable users to easily upload images/videos, specify output paths, and configure parameters using command-line inputs. The argparse library can be utilized for this purpose.\n",
+        "\n",
+        "2. I will **address data processing**. Depending on the input type, whether it's an image or video, I will implement code to handle both data formats. OpenCV offers numerous functions for processing images and videos. Furthermore, I will preprocess the input data to ensure they adhere to the desired format required by the machine learning model. Common practices include resizing and normalizing images or standardizing video lengths. Additionally, I will partition the data into training, validation, and test sets for subsequent steps.\n",
+        "\n",
+        "3. I will **load pre-trained models and apply them to the input data**. Pre-trained models available online, trained on extensive datasets like ImageNet, can be leveraged to expedite training and potentially improve prediction accuracy. I will train the model on our training data, optimizing objective functions using training code. Validation sets will be utilized to prevent overfitting, while test sets will be used solely for model evaluation.\n",
+        "\n",
+        "4. I will perform the **post-processing and visualization** in the fourth step. This may involve storing the model with the best performance for future use. \n",
+        "Additionally, data visualizations, such as plotting sample input images alongside their prediction results, can be created. Attention maps for transformer-based models can be visualized, and heat maps can be used to identify important features. Documentation and usage instructions will also be written for the software product.\n",
+        "\n",
+        "5. I will **deploy the machine learning pipeline** as a software product, employing DevOps techniques like AWS and Microsoft Azure. Once the software is complete, I will package it into a distributable format, such as a Python package or executable file, using tools like Docker. This will facilitate easy deployment and usage of the software.\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "GfDXOWGGtNYe"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "z0ffSZLoVp1F"
       },
       "source": [
-        "# Vision Transformer for Image Classification (MNIST)"
+        "# Demo: Vision Transformer for MNIST Image Classification "
       ]
     },
     {
