Include first part answer

--- a/Disaster_Tweet.ipynb
+++ b/Disaster_Tweet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN02NQoz5wnrLTFcg7WAzUj",
+      "authorship_tag": "ABX9TyNrRpTSRJ7aPm5sVSSWy4C9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1400,6 +1400,35 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/anthonywu2000/CSFIntershipAssessment2023/blob/main/Disaster_Tweet.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Given a jupyter notebook that has a functioning implementation of a machine learning model that identifies unique individuals out of a crowd through gait analysis, how would you translate that notebook to a piece of software that can be used to apply the model to any arbitrary images or videos provided.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "28FdyxgNQTAD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Extract Model Code: Identify the relevant code sections from the Jupyter notebook that contain the machine learning model implementation. Extract these sections into separate modules or functions.\n",
+        "\n",
+        "Convert Pre-processing Steps: If the Jupyter notebook includes any pre-processing steps specific to the dataset used for training, convert them into reusable functions that can be called within the software application.\n",
+        "\n",
+        "Load Trained Model: Save the trained model weights from the Jupyter notebook and load them into the software application.\n",
+        "\n",
+        "Implement Inference Code: Write code to perform inference using the loaded model. This code should accept input images or videos, apply any necessary pre-processing, and feed them into the model for predictions.\n",
+        "\n",
+        "Post-processing and Visualization: If there are any post-processing steps required to refine the model's predictions or visualize the results, implement those in the software application. \n",
+        "\n",
+        "Package and Distribute: Package the software application into a deployable form, such as a standalone executable, a Docker container, or a Python package."
+      ],
+      "metadata": {
+        "id": "20CsbcwvQW6L"
+      }
     },
     {
       "cell_type": "markdown",
