add description on bottom of nb

--- a/Disaster_Tweet.ipynb
+++ b/Disaster_Tweet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNrRpTSRJ7aPm5sVSSWy4C9",
+      "authorship_tag": "ABX9TyND3ImM4ktsprJMSj7bATUK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3626,11 +3626,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Well, we have a lower test accuracy of 56% and train accuracy of 71%. Due to time constraints and limited computational resources, we could not do more tedious computations on hyperparameter tuning. But overall, BERT pre-trained model should definitely give us a more robustr score than the previously described methods. However, the BERT model is just an experiment (extenstion) on this project. \n",
+        "Well, we have a lower test accuracy of 56% and train accuracy of 71%. Due to time constraints and limited computational resources, we could not do more tedious computations on hyperparameter tuning. But overall, BERT pre-trained model should definitely give us a more robust score than the previously described methods. However, the BERT model is just an experiment (extenstion) on this project. \n",
+        "\n",
+        "Given more time, I would explore more on different pre-trained model from spaCy and SentenceTransformer. I would also spend more time tuning the hyperparameters for BERT model. Additionally, I would also try other pre-trained models, like GPT. I would also like to perform simpler methods and use it as a baseline for this classification task.\n",
         "\n",
         "We can see that using pretrained model from spaCy and SentenceTransformer does not give us improved scores than the bag-of-words method. This is likely due to the fact that pre-trained models are not suited for this tweet data task. Overall, the best accuracy we achieved is 80% on the test set, and this score only depicts on how the model performs on unseen data. \n",
         "\n",
-        "Overfitting and Optimization bias are not a bog issue in this task; however, by experience, BERT model tends to give very high accuracy scores for both train and test set. "
+        "Overfitting and Optimization bias are not a big issue in this task; however, by experience, BERT model tends to give very high accuracy scores for both train and test set. "
       ],
       "metadata": {
         "id": "DCg3bzXOO0Jj"
